# deploy-functions-oidc

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  pytest.ini  update_requirements.sh
.github/: CODEOWNERS
.github/workflows/: code-quality.yaml  deploy-functions-dev.yaml  deploy-functions-prod.yaml  deploy-functions.yaml  deploy-pr.yaml  deploy-push-master.yaml  deploy-push-test.yaml  deploy-push.yaml  generate-matrix.yaml
build_scripts/: changed_functions.py
common/: README.md  function_config_prod.yaml  function_config_test.yaml  utilities.py
example_function/: function_config.yaml  handler.py
example_function/schedules/: test.yaml
example_function1/: function_config.yaml  function_config_prod.yaml  function_config_test.yaml  handler.py  requirements.txt
example_function1/schedules/: test.yaml
example_function2/: function_config.yaml  function_config_dev.yaml  function_config_prod.yaml  function_config_test.yaml  handler.py
example_with_logging/: another_file.py  function_config.yaml  handler.py  requirements.txt
fn_kall_files_contextualization/: config.py  constants.py  function_config_dev.yaml  handler.py  pipeline.py  requirements.txt
fn_kall_files_contextualization/schedules/: dev.yaml
fn_meta_contextualization/: constants.py  function_config.yaml  handler.py
fn_meta_contextualization/schedules/: main.yaml
fn_pnid_contextualization/: config.py  constants.py  function_config.yaml  handler.py  pipeline.py
fn_pnid_contextualization/schedules/: main.yaml
fn_rte_data_generator/: config.py  function_config.yaml  handler.py  requirements.txt  rte.py  rte_transformation.py
fn_rte_data_generator/tests/: test_rte.py
fn_uptime_data_generator/: handler.py  requirements.txt  uptime.py
tests/common/: test_utilities.py
(+8 files in other folders)
